[tool.poetry]
name = "test-poetry-lower-priority"
version = "0.1.0"
description = "Poetry with lower priority files"
authors = ["Test <test@example.com>"]

# Note: No python version in dependencies to test Pipfile/environment.yml

[tool.poetry.dependencies]
requests = "2.31.0"
Django = "2.2.0"
flask = "2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
